--- a/inloggad.html
+++ b/inloggad.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
-<html lang="en">
+
+<html lang="en" class="full-height">
 <head>
   <meta charset="utf-8">
   <title>418 I'm a teapot</title>
@@ -12,19 +13,326 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
+  <link rel="stylesheet" href="inloggad.css">
 </head>
 <body>
 
-  <header>
-    <h1>Inloggad</h1>
-  </header>
-  <nav>
-    <p><a href="index.html">Home</a></p>
-    <p><a href="inloggad.html">Inloggad</a></p>
-    <p><a href="contact.html">Kontakt</a></p>
+<title>Material Design for Bootstrap</title>
 
-  </nav>
-  <footer></footer>
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Google Fonts Roboto -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<!-- Bootstrap core CSS -->
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<!-- Material Design Bootstrap -->
+<link rel="stylesheet" href="css/mdb.min.css">
+ <!-- My CSS -->
+<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="css/style.css">
+
+</head>
+<body>
+  <!--Main Navigation-->
+  <header>
+  <!--Navbar -->
+    <nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color">
+    <a class="navbar-brand" href="#">418: I'm a teapot</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
+    aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="inloggad.html" title="Hem"><i class="fas fa-home"></i>Hem
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html" title="Kontakt"><i class="far fa-envelope"></i>Kontakt</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto nav-flex-icons">
+        <li class="nav-item dropdown" title="Min profil">
+          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-user"></i>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right dropdown-default"
+          aria-labelledby="navbarDropdownMenuLink-333">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="index.html">Logga ut</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+    </nav>
+<!--/.Navbar -->
+  </header>
+  <main class="text-center my-5">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+
+          <h1 align="center">FEED</h1>
+
+        </div>
+      </div>
+    </div>
+
+  </main>
+
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <div class="container">
+  <div class="col-md-7">
+
+      <div class="social-feed-box">
+
+          <div class="pull-right social-action dropdown">
+              <button data-toggle="dropdown" class="dropdown-toggle btn-white">
+                  <i class="fa fa-angle-down"></i>
+              </button>
+              <ul class="dropdown-menu m-t-xs">
+                  <li><a href="#">Config</a></li>
+              </ul>
+          </div>
+          <div class="social-avatar">
+              <a href="" class="pull-left">
+                  <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+              </a>
+              <div class="media-body">
+                  <a href="#">
+                      Andrew Williams
+                  </a>
+                  <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
+              </div>
+          </div>
+          <div class="social-body">
+              <p>
+                  Many desktop publishing packages and web page editors now use Lorem Ipsum as their
+                  default model text, and a search for 'lorem ipsum' will uncover many web sites still
+                  in their infancy. Packages and web page editors now use Lorem Ipsum as their
+                  default model text.
+              </p>
+
+              <div class="btn-group">
+                  <button class="btn btn-white btn-xs"><i class="fa fa-thumbs-up"></i> Like this!</button>
+                  <button class="btn btn-white btn-xs"><i class="fa fa-comments"></i> Comment</button>
+                  <button class="btn btn-white btn-xs"><i class="fa fa-share"></i> Share</button>
+              </div>
+          </div>
+          <div class="social-footer">
+              <div class="social-comment">
+                  <a href="" class="pull-left">
+                      <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+                  </a>
+                  <div class="media-body">
+                      <a href="#">
+                          Andrew Williams
+                      </a>
+                      Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words.
+                      <br>
+                      <a href="#" class="small"><i class="fa fa-thumbs-up"></i> 26 Like this!</a> -
+                      <small class="text-muted">12.06.2014</small>
+                  </div>
+              </div>
+
+              <div class="social-comment">
+                  <a href="" class="pull-left">
+                      <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+                  </a>
+                  <div class="media-body">
+                      <a href="#">
+                          Andrew Williams
+                      </a>
+                      Making this the first true generator on the Internet. It uses a dictionary of.
+                      <br>
+                      <a href="#" class="small"><i class="fa fa-thumbs-up"></i> 11 Like this!</a> -
+                      <small class="text-muted">10.07.2014</small>
+                  </div>
+              </div>
+
+              <div class="social-comment">
+                  <a href="" class="pull-left">
+                      <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+                  </a>
+                  <div class="media-body">
+                       <textarea class="form-control" placeholder="Write comment..."></textarea>
+                  </div>
+              </div>
+
+          </div>
+
+      </div>
+
+      <div class="social-feed-box">
+
+          <div class="pull-right social-action dropdown">
+              <button data-toggle="dropdown" class="dropdown-toggle btn-white">
+                  <i class="fa fa-angle-down"></i>
+              </button>
+              <ul class="dropdown-menu m-t-xs">
+                  <li><a href="#">Config</a></li>
+              </ul>
+          </div>
+          <div class="social-avatar">
+              <a href="" class="pull-left">
+                  <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+              </a>
+              <div class="media-body">
+                  <a href="#">
+                      Andrew Williams
+                  </a>
+                  <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
+              </div>
+          </div>
+          <div class="social-body">
+              <p>
+                  Many desktop publishing packages and web page editors now use Lorem Ipsum as their
+                  default model text, and a search for 'lorem ipsum' will uncover many web sites still
+                  in their infancy. Packages and web page editors now use Lorem Ipsum as their
+                  default model text.
+              </p>
+              <p>
+                  Lorem Ipsum as their
+                  default model text, and a search for 'lorem ipsum' will uncover many web sites still
+                  in their infancy. Packages and web page editors now use Lorem Ipsum as their
+                  default model text.
+              </p>
+              <img src="https://via.placeholder.com/650x280/FFB6C1/000000" class="img-responsive">
+              <div class="btn-group">
+                  <button class="btn btn-white btn-xs"><i class="fa fa-thumbs-up"></i> Like this!</button>
+                  <button class="btn btn-white btn-xs"><i class="fa fa-comments"></i> Comment</button>
+                  <button class="btn btn-white btn-xs"><i class="fa fa-share"></i> Share</button>
+              </div>
+          </div>
+          <div class="social-footer">
+              <div class="social-comment">
+                  <a href="" class="pull-left">
+                      <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+                  </a>
+                  <div class="media-body">
+                      <a href="#">
+                          Andrew Williams
+                      </a>
+                      Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words.
+                      <br>
+                      <a href="#" class="small"><i class="fa fa-thumbs-up"></i> 26 Like this!</a> -
+                      <small class="text-muted">12.06.2014</small>
+                  </div>
+              </div>
+
+              <div class="social-comment">
+                  <a href="" class="pull-left">
+                      <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+                  </a>
+                  <div class="media-body">
+                      <a href="#">
+                          Andrew Williams
+                      </a>
+                      Making this the first true generator on the Internet. It uses a dictionary of.
+                      <br>
+                      <a href="#" class="small"><i class="fa fa-thumbs-up"></i> 11 Like this!</a> -
+                      <small class="text-muted">10.07.2014</small>
+                  </div>
+              </div>
+
+              <div class="social-comment">
+                  <a href="" class="pull-left">
+                      <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+                  </a>
+                  <div class="media-body">
+                      <a href="#">
+                          Andrew Williams
+                      </a>
+                      Making this the first true generator on the Internet. It uses a dictionary of.
+                      <br>
+                      <a href="#" class="small"><i class="fa fa-thumbs-up"></i> 11 Like this!</a> -
+                      <small class="text-muted">10.07.2014</small>
+                  </div>
+              </div>
+
+              <div class="social-comment">
+                  <a href="" class="pull-left">
+                      <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+                  </a>
+                  <div class="media-body">
+                      <textarea class="form-control" placeholder="Write comment..."></textarea>
+                  </div>
+              </div>
+
+          </div>
+
+      </div>
+
+      <div class="social-feed-box">
+
+          <div class="pull-right social-action dropdown">
+              <button data-toggle="dropdown" class="dropdown-toggle btn-white">
+                  <i class="fa fa-angle-down"></i>
+              </button>
+              <ul class="dropdown-menu m-t-xs">
+                  <li><a href="#">Config</a></li>
+              </ul>
+          </div>
+          <div class="social-avatar">
+              <a href="" class="pull-left">
+                  <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+              </a>
+              <div class="media-body">
+                  <a href="#">
+                      Andrew Williams
+                  </a>
+                  <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
+              </div>
+          </div>
+          <div class="social-body">
+              <p>
+                   Packages and web page editors now use Lorem Ipsum as their
+                  default model text. Page editors now use Lorem Ipsum as their
+                  default model text.
+              </p>
+              <div class="btn-group">
+                  <button class="btn btn-white btn-xs"><i class="fa fa-thumbs-up"></i> Like this!</button>
+                  <button class="btn btn-white btn-xs"><i class="fa fa-comments"></i> Comment</button>
+                  <button class="btn btn-white btn-xs"><i class="fa fa-share"></i> Share</button>
+              </div>
+          </div>
+          <div class="social-footer">
+
+
+              <div class="social-comment">
+                  <a href="" class="pull-left">
+                      <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+                  </a>
+                  <div class="media-body">
+                      <a href="#">
+                          Andrew Williams
+                      </a>
+                      Making this the first true generator on the Internet. It uses a dictionary of.
+                      <br>
+                      <a href="#" class="small"><i class="fa fa-thumbs-up"></i> 11 Like this!</a> -
+                      <small class="text-muted">10.07.2014</small>
+                  </div>
+              </div>
+
+              <div class="social-comment">
+                  <a href="" class="pull-left">
+                      <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+                  </a>
+                  <div class="media-body">
+                      <textarea class="form-control" placeholder="Write comment..."></textarea>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  </div>
+  <footer></footer>-->
 
 </body>
 </html>
