uppdaterat länkar i index

--- a/index.html
+++ b/index.html
@@ -8,11 +8,22 @@
   <meta name="author" content="SitePoint">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="main.css">
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<link rel="icon" type="image/png" sizes="16x16" href="kettle.png">  
+  <link rel="icon" type="image/png" sizes="16x16" href="kettle.png">  
+  
+  <!-- mdboostrap-->
+  <title>Material Design for Bootstrap</title>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Google Fonts Roboto -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Material Design Bootstrap -->
+  <link rel="stylesheet" href="css/mdb.min.css">
+  <!-- My CSS -->
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
