--- a/contact.html
+++ b/contact.html
@@ -7,48 +7,46 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"> 
   <title>418 I'm a teapot</title>
   <meta name="description" content="x">
-  <meta name="author" content="Johanna Erlandsson">
-  <link rel="icon" type="image/png" sizes="16x16" href="teapot.png"> 
- 
-  
+  <meta name="author" content="Team 418: I'm a teapot">
+  <link rel="icon" type="image/png" sizes="16x16" href="kettle.png"> 
 
-<!-- mdboostrap-->
-
-<title>Material Design for Bootstrap</title>
-
-<!-- Font Awesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- Google Fonts Roboto -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-<!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- Material Design Bootstrap -->
-<link rel="stylesheet" href="css/mdb.min.css">
- <!-- My CSS -->
-<link rel="stylesheet" href="main.css">
-<link rel="stylesheet" href="css/style.css">
-
+  <!-- mdboostrap-->
+  <title>Material Design for Bootstrap</title>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Google Fonts Roboto -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Material Design Bootstrap -->
+  <link rel="stylesheet" href="css/mdb.min.css">
+  <!-- My CSS -->
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!--Main Navigation-->
   <header>
   <!--Navbar -->
-    <nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color">
-    <a class="navbar-brand" href="#">418: I'm a teapot</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
-    aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="mb-1 navbar navbar-expand-lg navbar-dark">
+      <a class="navbar-brand" href="#">418: I'm a teapot</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
+      aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="inloggad.html" title="Hem"><i class="fas fa-home"></i>Hem
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
+       <ul class="navbar-nav mr-auto">
+         <li class="nav-item active">
+           <a class="nav-link" href="inloggad.html" title="Hem"><i class="fas fa-home"></i>Hem
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html" title="Kontakt"><i class="far fa-envelope"></i>Kontakt</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html" title="Kontakt"><i class="fas fa-plus-square"></i>Lägg till</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto nav-flex-icons">
@@ -167,80 +165,25 @@
 <!-- Section: Contact v.1 -->
 </main>
 
-<!--
-<main>
-<section class="my-card">
-  <h2 class="h1-responsive font-weight-bold text-center my-5">Contact us</h2>
-  <p class="text-center w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
-    eum porro a pariatur veniam.</p>
-  <div class="row">
-    <div class="col-md-9 mb-md-0 mb-5">
-      <form>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="md-form mb-0">
-              <input type="text" id="contact-name" class="form-control">
-              <label for="contact-name" class="">Your name</label>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="md-form mb-0">
-              <input type="text" id="contact-email" class="form-control">
-              <label for="contact-email" class="">Your email</label>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="md-form mb-0">
-              <input type="text" id="contact-Subject" class="form-control">
-              <label for="contact-Subject" class="">Subject</label>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="md-form">
-              <textarea id="contact-message" class="form-control md-textarea" rows="3"></textarea>
-              <label for="contact-message">Your message</label>
-            </div>
-          </div>
-        </div>
-      </form>
-      <div class="text-center text-md-left">
-        <a class="btn btn-primary btn-md">Send</a>
-      </div>
-    </div>
-    <div class="col-md-3 text-center">
-      <ul class="list-unstyled mb-0">
-        <li>
-          <i class="fas fa-map-marker-alt fa-2x blue-text"></i>
-          <p>San Francisco, CA 94126, USA</p>
-        </li>
-        <li>
-          <i class="fas fa-phone fa-2x mt-4 blue-text"></i>
-          <p>+ 01 234 567 89</p>
-        </li>
-        <li>
-          <i class="fas fa-envelope fa-2x mt-4 blue-text"></i>
-          <p class="mb-0">contact@example.com</p>
-        </li>
-      </ul>
-    </div>
-  </div>
-</section>
-</main>
--->
+<div style="height: 100px;">
 
-<div style="height: 50px;"></div>
-
-  
-  
+</div>
   <!--Footer-->
-  <footer>
-  
+  <footer class="footerLists">
+  <div>
+    <ul class="listFooter">
+      <li><h3>Kontakt</h3></li>
+      <li>012 345 67 89</li>
+      <li>Måndag - Fredag 08 - 18</li>
+    </ul>
+    <ul class="listFooter">
+      <li><h3>Adress</h3></li>
+      <li>Adress 13 </li>
+      <li>211 20 Malmö</li>
+    </ul>
+  </div>
   </footer>
+
   <!--Footer-->
     <!-- End your project here-->
   
