--- a/inloggad.html
+++ b/inloggad.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 
-
 <html lang="en" class="full-height">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"> 
   <title>418 I'm a teapot</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <meta name="description" content="x">
+  <meta name="author" content="Team 418: I'm a teapot">
+  <link rel="icon" type="image/png" sizes="16x16" href="kettle.png"> 
+
+
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
-  <link rel="stylesheet" href="inloggad.css">
-</head>
-<body>
 
-<title>Material Design for Bootstrap</title>
+ 
+
 
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
@@ -31,7 +29,19 @@
  <!-- My CSS -->
 <link rel="stylesheet" href="main.css">
 <link rel="stylesheet" href="css/style.css">
-
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Google Fonts Roboto -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<!-- Bootstrap core CSS -->
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<!-- Material Design Bootstrap -->
+<link rel="stylesheet" href="css/mdb.min.css">
+<!-- My CSS -->
+<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="inloggad.css">
 </head>
 <body>
   <!--Main Navigation-->
@@ -333,6 +343,15 @@
   </div>
   </div>
   <footer></footer>-->
-
+    <!-- jQuery -->
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="js/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <!-- Your custom scripts (optional) -->
+    <script type="text/javascript"></script>
 </body>
 </html>
