uppdatering av inloggad
fixat footer, att feeden är centrerad och att man kan komma in på profil från inloggad.

--- a/inloggad.html
+++ b/inloggad.html
@@ -72,8 +72,7 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right dropdown-default"
           aria-labelledby="navbarDropdownMenuLink-333">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="profil.html">Min sida</a>
             <a class="dropdown-item" href="index.html">Logga ut</a>
           </div>
         </li>
@@ -342,7 +341,12 @@
       </div>
   </div>
   </div>
-  <footer></footer>-->
+  <footer>
+    <div class="footer">
+      <p>Footer</p>
+      <p>Projekt skapat av Johanna, Djurdja & Malin.
+    </div>  
+  </footer>
     <!-- jQuery -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
