Uppdaterat navbar och footer

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" class="full-height">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"> 
   <title>418 I'm a teapot</title>
@@ -10,8 +10,7 @@
   <meta name="author" content="Team 418: I'm a teapot">
   <link rel="icon" type="image/png" sizes="16x16" href="kettle.png"> 
 
-  <!-- mdboostrap-->
-  <title>Material Design for Bootstrap</title>
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -46,8 +45,14 @@
           <a class="nav-link" href="contact.html" title="Kontakt"><i class="far fa-envelope"></i>Kontakt</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html" title="Kontakt"><i class="fas fa-plus-square"></i>Lägg till</a>
+          <a class="nav-link" href="#" title="Lägg till"><i class="fas fa-plus-square"></i>Lägg till</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="profil.html"><i class="fas fa-user"></i>Profilsida</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="index.html"><i class="fas fa-sign-out-alt"></i></i>Logga ut</a>
+        </li> 
       </ul>
       <ul class="navbar-nav ml-auto nav-flex-icons">
         <li class="nav-item dropdown" title="Min profil">
@@ -57,9 +62,10 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right dropdown-default"
           aria-labelledby="navbarDropdownMenuLink-333">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="index.html">Logga ut</a>
+            <a class="dropdown-item" href="inloggad.html"><i class="fas fa-home"></i>Hem</a>
+            <a class="dropdown-item" href="profil.html"><i class="fas fa-user"></i>Profilsida</a>
+            <a class="dropdown-item" href="contact.html"><i class="far fa-envelope"></i>Kontakt</a>
+            <a class="dropdown-item" href="index.html"><i class="fas fa-sign-out-alt"></i>Logga ut</a>
           </div>
         </li>
       </ul>
