--- a/profil.html
+++ b/profil.html
@@ -73,8 +73,10 @@
 
 	
 	<div class="container">
-		<div class="fb-profile"><img align="left" alt="Profile image example" class="fb-image-lg" src="profilbak.jpg">
-		<img align="left" alt="Profile image example" class="fb-image-profile" src="profilbild.jpg"></div>
+		<div class="fb-profile">
+		<img align="left" alt="Profile image example" class="fb-image-lg" src="profilbak.jpg">
+		<img align="center" alt="profilbild" class="profilbild" src="profilbild.jpg">
+	    </div>
 	</div>
 	<div><img alt="adamojag" class="adamoanna" src="adamoanna.jpg"></div>
 	<button class="dela" data-toggle="tooltip" title="Denna bild kommer synas för alla dina vänner">Dela</button>
